--- a/Client Side/admin/admin.html
+++ b/Client Side/admin/admin.html
@@ -24,6 +24,7 @@
       sizes="16x16"
       type="image/jpg"
     />
+    <script defer src="assets/js api/Admin.js"></script>
   </head>
 
   <body>
@@ -34,7 +35,7 @@
         <div id="page-inner">
           <div class="row">
             <div class="col-md-12">
-              <h2><i class="fa fa-users"></i> Users</h2>
+              <h2><i class="fa fa-users"></i> Admins</h2>
             </div>
           </div>
           <hr />
@@ -42,7 +43,8 @@
             <div class="col-md-8">
               <div class="panel panel-default">
                 <div class="panel-heading">
-                  <i class="fa fa-plus-circle"></i> Add New User
+                  <i class="fa fa-plus-circle"></i>
+                  <span class="page-state">Add New admin</span>
                 </div>
                 <div class="panel-body">
                   <div class="row">
@@ -53,22 +55,20 @@
                         method="POST"
                       >
                         <div class="form-group">
-                          <input type="hidden" name="user_id" value="" />
-                          <label>User id</label>
+                          <label>User ID</label>
                           <input
-                            type="text"
-                            placeholder="Please Enter your Name"
+                            type="number"
+                            placeholder="Please Enter the User ID"
                             class="form-control"
-                            name="userId"
+                            name="userid"
                             required
                           />
                         </div>
                         <div class="form-group">
-                          <input type="hidden" name="user_id" value="" />
-                          <label>Last Name</label>
+                          <label>Admin Last Name</label>
                           <input
                             type="text"
-                            placeholder="Please Enter your Name"
+                            placeholder="Please Enter Admin Last Name"
                             class="form-control"
                             name="adminLastName"
                             required
@@ -94,34 +94,6 @@
                             required
                           />
                         </div>
-
-                        <!-- <div class="form-group">
-                          <label>Address</label>
-                          <input
-                            type="text"
-                            class="form-control"
-                            placeholder="Please Enter address"
-                            name="address"
-                            required
-                          />
-                        </div> -->
-                        <!-- <div class="form-group">
-                          <label>Phone</label>
-                          <input
-                            type="tel"
-                            class="form-control"
-                            placeholder="Please Enter your phone"
-                            name="phone"
-                            required
-                          /> 
-                        </div>-->
-                        <!-- <div class="form-group">
-                          <label>User Type</label>
-                          <select class="form-control" name="role_id">
-                            <option value="1">Admin</option>
-                            <option value="2">Customer</option>
-                          </select>
-                        </div> -->
                         <div style="float: right">
                           <button type="submit" class="btn btn-primary">
                             Add Admin
@@ -161,7 +133,7 @@
                           <th>Action</th>
                         </tr>
                       </thead>
-                      <tbody>
+                      <tbody class="all-Admins">
                         <tr class="odd gradeX">
                           <td>1</td>
                           <td>2</td>
@@ -184,7 +156,6 @@
             </div>
           </div>
           <script src="assets/js/header.js"></script>
-
           <script src="assets/js/jquery-1.10.2.js"></script>
           <script src="assets/js/bootstrap.min.js"></script>
           <script src="assets/js/jquery.metisMenu.js"></script>
