some frontend work added, Variant Dashboard

--- a/Client Side/admin/header.html
+++ b/Client Side/admin/header.html
@@ -56,6 +56,9 @@
       <li>
         <a href="product.html"><i class="fa fa-bars"></i> Products</a>
       </li>
+      <li>
+        <a href="Variant.html"><i class="fa fa-bars"></i> Variant</a>
+      </li>
     </ul>
   </div>
 </nav>
