--- a/Client Side/admin/Variant.html
+++ b/Client Side/admin/Variant.html
@@ -24,7 +24,7 @@
       sizes="16x16"
       type="image/jpg"
     />
-    <script defer src="assets/js api/Product.js"></script>
+    <script defer src="assets/js api/Variant.js"></script>
   </head>
 
   <body>
@@ -49,47 +49,75 @@
                 <div class="panel-body">
                   <div class="row">
                     <div class="col-md-12">
-                      <form
-                        role="form"
-                        enctype="multipart/form-data"
-                        method="POST"
-                      >
+                      <form id="variantForm">
                         <div class="form-group">
-                          <label>Product Name</label>
-                          <input
-                            id="name"
-                            type="text"
-                            placeholder="Please Enter Product Name"
+                          <label>Product</label>
+                          <select
+                            id="variantProductSelect"
+                            name="productId"
                             class="form-control"
-                            name="name"
-                            required
+                          >
+                            <option value="">-- Select Product --</option>
+                            <!-- Dynamically filled -->
+                          </select>
+                        </div>
+
+                        <div class="form-group">
+                          <label>Variant Properties (JSON)</label>
+                          <textarea
+                            name="variantProperties"
+                            id="variantProperties"
+                            class="form-control"
+                            placeholder='{"color": "Black", "storage": "128GB"}'
+                          ></textarea>
+                        </div>
+
+                        <div class="form-group">
+                          <label>Image Paths (JSON array)</label>
+                          <textarea
+                            name="imagePaths"
+                            id="imagePaths"
+                            class="form-control"
+                            placeholder='["img1.jpg","img2.jpg"]'
+                          ></textarea>
+                        </div>
+
+                        <div class="form-group">
+                          <label>Status</label>
+                          <select
+                            id="variantStatus"
+                            name="status"
+                            class="form-control"
+                          >
+                            <option value="true">Active</option>
+                            <option value="false">Inactive</option>
+                          </select>
+                        </div>
+                        <div class="form-group">
+                          <label>Price</label>
+                          <input
+                            type="number"
+                            step="0.01"
+                            id="price"
+                            name="price"
+                            class="form-control"
+                            placeholder="Enter price"
                           />
                         </div>
+
                         <div class="form-group">
-                          <label>Product Category</label>
-                          <select
-                            id="subCategorySelect"
+                          <label>Quantity</label>
+                          <input
+                            type="number"
+                            id="quantity"
+                            name="quantity"
                             class="form-control"
-                            name="subCategoryId"
-                          >
-                            <option value="1">Category 1</option>
-                            <option value="2">Category 2</option>
-                          </select>
-                        </div>
-                        <div class="form-group">
-                          <label>Product Brand</label>
-                          <select
-                            id="BrandSelect"
-                            class="form-control"
-                            name="brandId"
-                          >
-                            <option value="1">Brand 1</option>
-                            <option value="2">Brand 2</option>
-                          </select>
+                            placeholder="Enter quantity"
+                          />
                         </div>
                         <div style="float: right">
                           <button type="submit" class="btn btn-primary">
-                            Add Product
+                            Add Variant
                           </button>
                           <button type="reset" class="btn btn-danger">
                             Cancel
@@ -111,32 +139,18 @@
                 </div>
                 <div class="panel-body">
                   <div class="table-responsive">
-                    <table
-                      class="table table-striped table-bordered table-hover"
-                      id="dataTables-example"
-                    >
+                    <table class="table table-striped">
                       <thead>
                         <tr>
-                          <th>Product ID</th>
-                          <th>Product Name</th>
-                          <th>Brand Name</th>
-                          <th>Category</th>
-                          <th>createdDate</th>
+                          <th>ID</th>
+                          <th>Product</th>
+                          <th>Properties</th>
+                          <th>Images</th>
+                          <th>Status</th>
                           <th>Action</th>
                         </tr>
                       </thead>
-                      <tbody class="all-Products">
-                        <tr class="odd gradeX">
-                          <td>Product 1</td>
-                          <td>10$</td>
-                          <td>Category 1</td>
-                          <td>
-                            <a href="#" class="btn btn-success">Edit</a>
-                            <a href="#" class="btn btn-danger">Delete</a>
-                          </td>
-                        </tr>
-                        <!-- More rows can be added here -->
-                      </tbody>
+                      <tbody class="all-variants"></tbody>
                     </table>
                   </div>
                 </div>
@@ -144,7 +158,6 @@
             </div>
           </div>
           <script src="assets/js/header.js"></script>
-
           <script src="assets/js/jquery-1.10.2.js"></script>
           <script src="assets/js/bootstrap.min.js"></script>
           <script src="assets/js/jquery.metisMenu.js"></script>
