some frontend work, Just Added some Shit Code

--- a/Client Side/admin/header.html
+++ b/Client Side/admin/header.html
@@ -59,6 +59,9 @@
       <li>
         <a href="Variant.html"><i class="fa fa-bars"></i> Variant</a>
       </li>
+      <li>
+        <a href="Order.html"><i class="fa fa-bars"></i> Orders</a>
+      </li>
     </ul>
   </div>
 </nav>
